IGNITE-22077 Add spring 6 support to spring session extension (#262)