@@ -38,6 +38,7 @@
         <spring-boot.version>2.2.13.RELEASE</spring-boot.version>
         <spring.data.version>2.2.13.RELEASE</spring.data.version>
         <spring53.version>5.3.19</spring53.version>
+        <spring61.version>6.1.6</spring61.version>
 
         <!--
             NOTE: The dependency versions below must be changed in the release branch up to
@@ -186,6 +187,102 @@
                             <appendFilename>true</appendFilename>
                             <excludeMainArtifact>true</excludeMainArtifact>
                             <failIfNoFiles>false</failIfNoFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>java-9+</id>
+            <activation>
+                <jdk>[9,)</jdk>
+            </activation>
+            <properties>
+                <maven.compiler.release>8</maven.compiler.release>
+            </properties>
+        </profile>
+        <profile>
+            <id>java-15+</id>
+            <activation>
+                <jdk>[15,)</jdk>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <!-- Do not bring ignite logic -->
+                        <inherited>false</inherited>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <forkCount>1</forkCount>
+                            <argLine>
+                                --add-opens=java.base/jdk.internal.access=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+                                --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
+                                --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
+                                --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
+                                --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+                                --add-opens=java.base/java.io=ALL-UNNAMED
+                                --add-opens=java.base/java.net=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-opens=java.base/java.security.cert=ALL-UNNAMED
+                                --add-opens=java.base/java.util=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                                --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                                --add-opens=java.base/java.lang=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+                                --add-opens=java.base/java.time=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.ssl=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-opens=java.base/sun.net.util=ALL-UNNAMED
+                                --add-opens=java.sql/java.sql=ALL-UNNAMED
+                                --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                                --add-opens=java.base/java.text=ALL-UNNAMED
+                                --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>io.gatling</groupId>
+                        <artifactId>gatling-maven-plugin</artifactId>
+                        <configuration>
+                            <jvmArgs>
+                                <jvmArg>--add-opens=java.base/jdk.internal.access=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/sun.nio.ch=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.io=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.net=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.nio=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.security.cert=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.util=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.util.concurrent=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.time=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/sun.security.ssl=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/sun.security.x509=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/sun.net.util=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.sql/java.sql=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.base/java.text=ALL-UNNAMED</jvmArg>
+                                <jvmArg>--add-opens=java.desktop/java.awt.font=ALL-UNNAMED</jvmArg>
+                            </jvmArgs>
                         </configuration>
                     </plugin>
                 </plugins>
